kubernetes/apps/media/jellyfin/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      nodeSelector:
        intel.feature.node.kubernetes.io/gpu: "true"
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [107]
      containers:
        - name: app
          image: ghcr.io/jellyfin/jellyfin:10.11.11
          ports:
            - name: http
              containerPort: 8096
          startupProbe:
            tcpSocket:
              port: 8096
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 2Gi
              gpu.intel.com/i915: "1"
            limits:
              cpu: "1"
              memory: 6Gi
              gpu.intel.com/i915: "1"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: cache
              mountPath: /cache
            - name: transcode
              mountPath: /transcode
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin
        - name: media
          persistentVolumeClaim:
            claimName: synology-media
        - name: encoding-xml
          configMap:
            name: jellyfin-config
        - name: cache
          emptyDir: {}
        - name: transcode
          emptyDir: {}
        - name: tmp
          emptyDir: {}
