kubernetes/apps/media/jellyfin/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  annotations:
    lbipam.cilium.io/ips: "10.0.30.39"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
